@@ -27,6 +27,26 @@ run {
     standardInput = System.in
 }
 
+/* TODO: Add a task like the template linked to the right main class for editor and welcome
+    screen.
+ */
+
+// This is a template for the game window
+task templateTask(type: JavaExec) {
+    doFirst   {
+        jvmArgs   =   [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls',
+                '--add-modules', 'javafx.fxml',
+                '--add-modules', 'javafx.graphics',
+                '--add-modules', 'javafx.base',
+                '--add-modules', 'javafx.swing',
+        ]
+    }
+    classpath = sourceSets.main.runtimeClasspath
+    mainClass = 'owlngo.gui.playfield.GameScreenMain'
+}
+
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
@@ -69,7 +89,6 @@ spotless {
         lineEndings 'UNIX'
     }
 }
-
 
 javafx {
     version = "17.0.1"
